src/main/java/com/example/weather_application/Errors/UserAlreadyExistException.java
package com.example.weather_application.Errors;

public class UserAlreadyExistException extends RuntimeException {
    public UserAlreadyExistException(String message) {
        super(message);
    }
}
